# text-analysis-llm

./: .env  .gitignore  README.md  pyproject.toml  test.md  기본_0_PydanticAI_프롬프트_엔지니어링.ipynb  기본_1_PydanticAI_기본 사용법.ipynb  기본_2_PydanticAI_MCP_도구_심화.py  기본_3_PydanticAI_구조화된 출력.ipynb  기본_4_PydanticAI_이미지 이해 및 기본 사용법.ipynb  기본_5_PydanticAI_이미지_데이터_분석.ipynb  실전_1_1_리뷰데이터_전처리.ipynb  실전_1_2_제품비교_리뷰분석.ipynb  실전_1_3_종합_인사이트도출.ipynb
data/: product_6842777459_reviews.json  product_8168630403_reviews.json  product_8217044805_reviews.json
docs/: Part0_AI_용어_개념정리.md
mcp_workspace/: ai_trend_report.md  memo.txt  project_ideas.txt  pydanticai_summary.md  sales_2024.csv
outputs/: _checkpoint_batch_reviews.json  _checkpoint_reviews.json  _checkpoint_reviews_sem.json  product_comparison_summary.txt  product_review_analysis.json
outputs/coupang_product_comparison/: comprehensive_insight.json  comprehensive_insight_report.md  cooccurrence_network_긍정_6842777459.html  cooccurrence_network_긍정_8168630403.html  cooccurrence_network_긍정_8217044805.html  cooccurrence_network_부정_6842777459.html  cooccurrence_network_부정_8168630403.html  cooccurrence_network_부정_8217044805.html  product_comparison_summary.txt
pydanticai_analysis_agent/: .env  README.md  agent_pipeline.py  example_single_agent.py
pydanticai_analysis_agent/config/: prompts.yaml  settings.yaml  utils.py
pydanticai_analysis_agent/outputs/20260409_173756/: analysis_report.md
pydanticai_analysis_agent/outputs/20260409_181242/: analysis_report.md
pydanticai_analysis_agent/schemas/: __init__.py  models.py
(+19 files in other folders)
